crates/tui/tests/snapshots/screens__trajectories_feed_at_sixty_columns.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 60, 16)"
---
"◆ SONDERA  trajectories                    console  ● READY "
"filter all runs   3 of 3                                    "
"┌RUNS · 3──────────────────────────────────────────────────┐"
"│ VERDICT     AGENT          SUMMARY                       │"
"│  ● ALLOW    claude-code    refactored the storage layer  │"
"│  ■ DENY     cursor         ■2 attempted a recursive dele │"
"│  · NONE     codex          ~ wiring the OTel spans       │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌KEYS──────────────────────────────────────────────────────┐"
"│ <↑↓/jk> move   <enter> open   <i> inspect   </> filter   │"
"│ <r> refresh   <t> theme   <q> quit                       │"
"└──────────────────────────────────────────────────────────┘"
