crates/tui/tests/snapshots/screens__trajectories_feed_with_an_active_filter.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 110, 14)"
---
"▀▀▀▀ SONDERA  trajectories                                                                   console  ● READY "
"▀▀▀▀ filter curs▏   1 of 3                                                                                    "
"┌RUNS · 1────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ VERDICT     AGENT              ACTIVITY       RISK         STATUS     DUR     SUMMARY                      │"
"│  ■ DENY     cursor             ◉»⇄⇄⇄⇄⚙⚙$■$$✻◉  ■ HIGH      completed  4.2s    attempted a recursive delete │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"│                                                                                                            │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌KEYS────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ <↑↓/jk> move   <enter> open   <i> inspect   </> filter   <r> refresh   <t> theme   <q> quit                │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
