crates/tui/tests/snapshots/screens__transcript_renders_markdown_in_the_detail_pane.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 120, 24)"
---
"▀▀▀▀ SONDERA  trajectories / cursor / run-b                                                            console  ● READY "
"▀▀▀▀  ■ DENY   ■ HIGH   interrupted  completed   42 events   4.2s   Build cleanup blocked by poli…                      "
"                                                                                                                        "
"┌STEPS · 2─────────────────────────────┐┌RUN · DIGEST · SCAN ▾─────────────────────────────────────────────────────────┐"
"│ ▾ $ shell ■ DENY                     ││ Build cleanup blocked by policy                                              │"
"│     12:34:56 rm -rf /tmp/build ⟐     ││  ▲ INTERRUPTED   ■ HIGH   1 signal                                           │"
"│    ↳ exit 1                          ││ DIGEST                                                                       │"
"│   » prompt · user                    ││ The agent tried to clear the build tree with rm -rf and was denied.          │"
"│     12:35:10 Clean the build direct… │└──────────────────────────────────────────────────────────────────────────────┘"
"│                                      │┌EVENT 3/3 · PROMPT · USER─────────────────────────────────────────────────────┐"
"│                                      ││  · UNADJUDICATED                                                             │"
"│                                      ││ 12:35:10  evt-3                                                              │"
"│                                      ││ ──────────────────────────────────────────────────────────────────────────── │"
"│                                      ││ Task                                                                         │"
"│                                      ││                                                                              │"
"│                                      ││ Clean the build directory, then:                                             │"
"│                                      ││                                                                              │"
"│                                      ││ • run tests                                                                  │"
"│                                      ││ • report                                                                     │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
"┌KEYS──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ <↑↓/jk> step   <tab> tree · run · event   <←→/hl> fold   <n> next fire   <s> next signal   <r> refresh   <esc> back  │"
"│ <q> quit                                                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
