crates/tui/tests/snapshots/screens__transcript_shows_focus_on_the_detail_pane.snap
---
source: crates/tui/tests/screens.rs
expression: "render(&mut app, 120, 24)"
---
"▀▀▀▀ SONDERA  trajectories / cursor / run-b                                                            console  ● READY "
"▀▀▀▀  ■ DENY   ■ HIGH   interrupted  completed   42 events   4.2s   Build cleanup blocked by poli…                      "
"                                                                                                                        "
"┌STEPS · 2─────────────────────────────┐┌RUN · DIGEST · SCAN ▾─────────────────────────────────────────────────────────┐"
"│ ▾ $ shell ■ DENY                     ││ Build cleanup blocked by policy                                              │"
"│     12:34:56 rm -rf /tmp/build ⟐     ││  ▲ INTERRUPTED   ■ HIGH   1 signal                                           │"
"│    ↳ exit 1                          ││ DIGEST                                                                       │"
"│   » prompt · user                    ││ The agent tried to clear the build tree with rm -rf and was denied.          │"
"│     12:35:10 Clean the build direct… │└──────────────────────────────────────────────────────────────────────────────┘"
"│                                      │┌EVENT 1/3 · SHELL─────────────────────────────────────────────────────────────┐"
"│                                      ││  ■ DENY   ■ HIGH   ◆ IMPLEMENT   ⟐ side-effecting                            │"
"│                                      ││ recursive delete outside the workspace                                       │"
"│                                      ││ Removed a build directory.                                                   │"
"│                                      ││ 12:34:56  evt-1                                                              │"
"│                                      ││                                                                              │"
"│                                      ││ SIGNALS                                                                      │"
"│                                      ││  ■ HIGH  governance · destructive operation — Recursive delete on an         │"
"│                                      ││   absolute path.                                                             │"
"│                                      ││ ──────────────────────────────────────────────────────────────────────────── │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
"┌KEYS──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ <↑↓/jk> step   <tab> tree · run · event   <←→/hl> fold   <n> next fire   <s> next signal   <r> refresh   <esc> back  │"
"│ <q> quit                                                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
